--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </button>
       </div>
     </div>
-    <div class="row">
+    <div class="row m-2">
       <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
+        <div id="all-products">
         </div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
